fix the issue when settingthe  parent ele text-align center, the spin is on the right

--- a/components/spin/style/index.less
+++ b/components/spin/style/index.less
@@ -28,6 +28,7 @@
       max-height: 320px;
       width: 100%;
       z-index: 4;
+      display: block;
       .@{spin-prefix-cls}-dot {
         position: absolute;
         top: 50%;
